# EK_SMS

./: .dockerignore  .dockerignore.frontend  .env  .env.example  .env.frontend  .env.production  .env.render  .gitignore  .renderignore  .vercelignore  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_FIX_SUMMARY.md  COMPLETION_REPORT.md  CRITICAL_FIX_PLAN.md  CSP_SETTINGS_UPDATE.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_ENV_SETUP.md  DEPLOYMENT_OVERVIEW.md  DEPLOYMENT_SUMMARY.md  DOCKER_BUILD_HELP.md  DOCKER_SECURITY.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.frontend  FIELD_ALIGNMENT_REPORT.md  FIX_SUMMARY.md  FRONTEND_SECURITY.md  FRONTEND_SECURITY_QUICKSTART.md  GRADING_SYSTEM_IMPLEMENTATION.md  IMMUTABLE_GRADE_AUDIT_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  OTP_INTEGRATION_SUMMARY.md  Procfile  QUICK_FIX_STEPS.sh  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_SECURITY.md  RENDER_DEPLOYMENT.md  (+44 more)
eksms/: __init__.py  admin.py  apps.py  c091aa7d-2f50-40a3-aed2-775bc62029e6.docx  check_db_schools.py  check_models.py  clear_database.py  data.json  db.sqlite3  grep.txt  manage.py  migrate_output.txt  models.py  requirements.txt  schools_grep.txt  schools_grep2.txt  test_migrate.py  wsgi.py  ~$91aa7d-2f50-40a3-aed2-775bc62029e6.docx
eksms/eksms/: admin.py  admin_otp.py  asgi.py  csp_middleware.py  middleware.py  secure_views.py  settings.py  settings_secure.py  urls.py  views.py  views_extras.py  views_syllabus.py  wsgi.py
eksms/eksms_core/: admin.py  (+6 more)
public/: index.html  manifest.json  sw.js
src/: App.css  App.js  index.js  serviceWorkerRegistration.js
(+499 files in other folders)
